--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "keychroma",
-  "private": true,
+  "name": "lockmate",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -14,7 +13,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
     "uuid": "^9.0.1"
   },
