--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -22,5 +21,7 @@
     "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
     "react-scripts": "^5.0.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
